tests/unit/default/syntax-error/098-add-pk-alias.e.t
---- IN ----
+PK@alias
---- OUT ----
---- ERR ----
syntax: expected <table> after `+PK@alias` instead of EOL at position 9 - at line 1
---- EXIT ----
1
